Restore index.html with original content

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function downloadPoster() {
             </div>
             <div class="flex items-center justify-between border-t pt-6">
                 <div class="text-[10px] text-slate-400 italic text-left">AI 助学 · 跨学科成长计划<br>扫码加入我的学习战队</div>
-                <div class="w-12 h-12 bg-slate-200 rounded"></div>
+                <img src="myqr.jpg" class="w-12 h-12 rounded shadow-sm border border-slate-100" alt="微信二维码">
             </div>
             <button onclick="downloadPoster()" class="mt-4 w-full bg-green-500 text-white py-3 rounded-xl font-bold shadow-lg active:scale-95 transition flex items-center justify-center gap-2">
                 <i class="fas fa-camera"></i> 保存成就海报到相册
@@ -259,3 +259,4 @@ function downloadPoster() {
 
 </body>
 </html>
+
