--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@ function downloadPoster() {
                     <div class="flex flex-wrap gap-1">
                         <span class="text-[9px] font-black text-blue-600">CLOSET</span>
                         <span class="text-[9px] font-black text-blue-600">JAM</span>
+                        <span class="text-[9px] font-black text-blue-600">Stronger</span>
                     </div>
                 </div>
             </div>
@@ -273,7 +274,7 @@ function downloadPoster() {
                 <div class="relative group">
                     <div class="absolute -inset-1 bg-gradient-to-r from-amber-400 to-orange-500 rounded-lg blur opacity-20 group-hover:opacity-40 transition duration-1000"></div>
                     <div class="relative w-14 h-14 p-1 bg-white border border-slate-100 rounded-lg shadow-sm">
-                        <img src="myqr.png" class="w-full h-full object-cover" onerror="this.src='https://api.dicebear.com/7.x/shapes/svg?seed=qr&backgroundColor=f8fafc'">
+                        <img src="myqr.jpg" class="w-full h-full object-cover" onerror="this.src='https://api.dicebear.com/7.x/shapes/svg?seed=qr&backgroundColor=f8fafc'">
                     </div>
                 </div>
             </div>
@@ -288,6 +289,7 @@ function downloadPoster() {
 
 </body>
 </html>
+
 
 
 
