--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@ function downloadPoster() {
                 <div class="bg-slate-50 p-3 rounded-xl border border-slate-100 text-left">
                     <div class="text-[9px] text-slate-400 font-bold uppercase mb-1">Vocabulary</div>
                     <div class="flex flex-wrap gap-1">
-                        <span class="text-[9px] font-black text-blue-600">CLOSET</span>
-                        <span class="text-[9px] font-black text-blue-600">JAM</span>
-                        <span class="text-[9px] font-black text-blue-600">Stronger</span>
+                        <span class="text-[9px] font-black text-blue-600">closet</span>
+                        <span class="text-[9px] font-black text-blue-600">jam</span>
+                        <span class="text-[9px] font-black text-blue-600">stronger</span>
                     </div>
                 </div>
             </div>
@@ -289,6 +289,7 @@ function downloadPoster() {
 
 </body>
 </html>
+
 
 
 
