--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <i class="fas fa-chevron-right text-slate-300"></i>
             </a>
 
-            <div class="text-center pt-8 opacity-40 italic text-xs">后续关卡正在赶来的路上...</div>
+            <div class="text-center pt-8 opacity-40 italic text-xs">等待老爸更新...</div>
         </div>
     </div>
 
@@ -56,3 +56,4 @@
     </script>
 </body>
 </html>
+
