--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
                 <i class="fas fa-chevron-right text-slate-300"></i>
             </a>
 
+             <a href="chapter2.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-orange-100 flex items-center justify-between active:scale-95 transition">
+                <div class="flex items-center gap-4 text-left">
+                    <div class="w-10 h-10 bg-orange-500 rounded-full flex items-center justify-center text-white font-bold relative">
+                        2
+                        <div id="ch2-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
+                            <i class="fas fa-check text-[10px] text-white"></i>
+                        </div>
+                    </div>
+                    <span class="font-bold text-slate-700">第三章：美丽的金发女孩</span>
+                </div>
+                <i class="fas fa-chevron-right text-slate-300"></i>
+            </a>
+            
             <div class="text-center pt-8 opacity-40 italic text-xs">等待老爸更新...</div>
             <div class="mt-12 pb-8">
     <button onclick="resetProgress()" class="text-[10px] text-slate-300 hover:text-red-400 transition flex items-center gap-1 mx-auto">
@@ -79,5 +92,6 @@
 </script>
 </body>
 </html>
+
 
 
