--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
              <a href="chapter2.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-orange-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-orange-500 rounded-full flex items-center justify-center text-white font-bold relative">
+                    <div class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white font-bold relative">
                         3
-                        <div id="ch1-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
+                        <div id="ch3-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
                             <i class="fas fa-check text-[10px] text-white"></i>
                         </div>
                     </div>
@@ -92,6 +92,7 @@
 </script>
 </body>
 </html>
+
 
 
 
