--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <i class="fas fa-chevron-right text-slate-300"></i>
             </a>
 
-             <a href="chapter2.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-orange-100 flex items-center justify-between active:scale-95 transition">
+             <a href="chapter3.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-blue-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
                     <div class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white font-bold relative">
                         3
@@ -92,6 +92,7 @@
 </script>
 </body>
 </html>
+
 
 
 
