--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <i class="fas fa-check text-[10px] text-white"></i>
                         </div>
                     </div>
-                    <span class="font-bold text-slate-700">第一章：阿姨在找汤姆</span>
+                    <span class="font-bold text-slate-700">第一章：淘气的汤姆</span>
                 </div>
                 <i class="fas fa-chevron-right text-slate-300"></i>
             </a>
@@ -98,6 +98,7 @@
 </script>
 </body>
 </html>
+
 
 
 
