--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <i class="fas fa-chevron-right text-slate-300"></i>
             </a>
 
-            <a href="chapter3.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-blue-100 flex items-center justify-between active:scale-95 transition">
+            <a href="chapter3.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-yellow-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white font-bold relative">
+                    <div class="w-10 h-10 bg-yellow-500 rounded-full flex items-center justify-center text-white font-bold relative">
                         3
                         <div id="ch3-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
                             <i class="fas fa-check text-[10px] text-white"></i>
@@ -171,3 +171,4 @@
 </script>
 </body>
 </html>
+
