--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
         <div class="space-y-4" id="chapter-list">
             <a href="chapter1.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-blue-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        1
-                        <div id="ch1-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white font-bold relative">1
+                        <div id="ch1-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第一章：淘气的汤姆</span>
                 </div>
@@ -38,11 +35,8 @@
 
             <a href="chapter2.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-orange-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-orange-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        2
-                        <div id="ch2-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-orange-500 rounded-full flex items-center justify-center text-white font-bold relative">2
+                        <div id="ch2-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第二章：伟大的刷墙艺术</span>
                 </div>
@@ -51,11 +45,8 @@
 
             <a href="chapter3.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-yellow-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-yellow-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        3
-                        <div id="ch3-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-yellow-500 rounded-full flex items-center justify-center text-white font-bold relative">3
+                        <div id="ch3-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第三章：美丽的金发女孩</span>
                 </div>
@@ -64,11 +55,8 @@
 
             <a href="chapter4.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-indigo-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-indigo-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        4
-                        <div id="ch4-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-indigo-500 rounded-full flex items-center justify-center text-white font-bold relative">4
+                        <div id="ch4-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第四章：主日学校的奖品</span>
                 </div>
@@ -77,11 +65,8 @@
 
             <a href="chapter5.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-teal-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-teal-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        5
-                        <div id="ch5-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-teal-500 rounded-full flex items-center justify-center text-white font-bold relative">5
+                        <div id="ch5-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第五章：教堂里的闹剧</span>
                 </div>
@@ -90,11 +75,8 @@
 
             <a href="chapter6.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-purple-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-purple-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        6
-                        <div id="ch6-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-purple-500 rounded-full flex items-center justify-center text-white font-bold relative">6
+                        <div id="ch6-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第六章：拔牙大作战</span>
                 </div>
@@ -103,11 +85,8 @@
 
             <a href="chapter7.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-rose-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-rose-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        7
-                        <div id="ch7-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-rose-500 rounded-full flex items-center justify-center text-white font-bold relative">7
+                        <div id="ch7-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第七章：课堂上的扁虱</span>
                 </div>
@@ -116,13 +95,20 @@
 
             <a href="chapter13.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-sky-100 flex items-center justify-between active:scale-95 transition">
                 <div class="flex items-center gap-4 text-left">
-                    <div class="w-10 h-10 bg-sky-500 rounded-full flex items-center justify-center text-white font-bold relative">
-                        13
-                        <div id="ch13-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center">
-                            <i class="fas fa-check text-[10px] text-white"></i>
-                        </div>
+                    <div class="w-10 h-10 bg-sky-500 rounded-full flex items-center justify-center text-white font-bold relative">13
+                        <div id="ch13-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
                     </div>
                     <span class="font-bold text-slate-700">第十三章：逃往荒岛</span>
+                </div>
+                <i class="fas fa-chevron-right text-slate-300"></i>
+            </a>
+
+            <a href="chapter14.html" class="block bg-white p-5 rounded-3xl shadow-sm border-2 border-cyan-100 flex items-center justify-between active:scale-95 transition">
+                <div class="flex items-center gap-4 text-left">
+                    <div class="w-10 h-10 bg-cyan-500 rounded-full flex items-center justify-center text-white font-bold relative">14
+                        <div id="ch14-check" class="hidden absolute -top-1 -right-1 w-5 h-5 bg-green-500 rounded-full border-2 border-white flex items-center justify-center"><i class="fas fa-check text-[10px] text-white"></i></div>
+                    </div>
+                    <span class="font-bold text-slate-700">第十四章：岛上的探险家</span>
                 </div>
                 <i class="fas fa-chevron-right text-slate-300"></i>
             </a>
@@ -142,15 +128,12 @@
     </div>
 
 <script>
-    const TOTAL_CHAPTERS = 35; // 总章节数保持35，给孩子长期目标
+    const TOTAL_CHAPTERS = 35; 
+    // 这里加入了 ch14
+    const chapters = ['ch1', 'ch2', 'ch3', 'ch4', 'ch5', 'ch6', 'ch7', 'ch13', 'ch14'];
 
-    // 需要检查的章节数组，新增了 ch13
-    const chapters = ['ch1', 'ch2', 'ch3', 'ch4', 'ch5', 'ch6', 'ch7', 'ch13'];
-
-    // 核心进度检查逻辑
     function checkProgress() {
         let doneCount = 0;
-
         chapters.forEach(ch => {
             const isDone = localStorage.getItem('tom_' + ch + '_done');
             const checkEl = document.getElementById(ch + '-check');
@@ -164,13 +147,11 @@
             }
         });
 
-        // 更新进度条
         const progressPercent = (doneCount / TOTAL_CHAPTERS) * 100;
         document.getElementById('progress-bar').style.width = progressPercent + '%';
         document.getElementById('progress-text').innerText = `${doneCount} / ${TOTAL_CHAPTERS}`;
     }
 
-    // 重置进度逻辑
     function resetProgress() {
         if (confirm('老爸，确定要清除所有辛苦攒下的勋章，重新挑战吗？')) {
             chapters.forEach(ch => {
